classe login do app

--- a/index.html
+++ b/index.html
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+    <div class="login">
+        <form>
+            <input type="email" name="email">
+            <input type="password" name="password" />
+        </form>
+    </div>
+
         //Config Project
         const firebaseConfig = {
         apiKey: "AIzaSyCkItC2SHnKqMuZWV5fsUpRZwY5CyTzHPY",
