--- a/index.html
+++ b/index.html
@@ -15,6 +15,12 @@
         </form>
     </div>
 
+    <script>
+        // Import the functions you need from the SDKs you need
+        import { initializeApp } from "firebase/app";
+        import { getAuth } from 'firebase/auth';
+        import { getFirestore } from 'firebase/firestore';
+
         //Config Project
         const firebaseConfig = {
         apiKey: "AIzaSyCkItC2SHnKqMuZWV5fsUpRZwY5CyTzHPY",
