Initializate app and functions

--- a/index.html
+++ b/index.html
@@ -32,3 +32,8 @@
         measurementId: "G-JGY9CTGSZG"
         };
 
+        // Initialize Firebase
+        const app = initializeApp(firebaseConfig);
+        const auth = getAuth(app);
+        const firestore = getFirestore(app);
+
