--- a/index.html
+++ b/index.html
@@ -37,3 +37,7 @@
         const auth = getAuth(app);
         const firestore = getFirestore(app);
 
+        //Começamos aqui.
+    </script>
+</body>
+</html>
