--- a/index.html
+++ b/index.html
@@ -9,17 +9,24 @@
 <body>
 
     <div class="login">
+        <h2>Faça o Login no App</h2>
         <form>
             <input type="email" name="email">
             <input type="password" name="password" />
+            <input type="submit" name="acao" value="Logar!" />
         </form>
-    </div>
+    </div><!--login-->
+
+    <div class="container-login">
+
+    </div><!--container-login-->
+
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-app.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-auth.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/9.6.10/firebase-firestore.js"></script>
 
     <script>
         // Import the functions you need from the SDKs you need
-        import { initializeApp } from "firebase/app";
-        import { getAuth } from 'firebase/auth';
-        import { getFirestore } from 'firebase/firestore';
 
         //Config Project
         const firebaseConfig = {
@@ -33,11 +40,21 @@
         };
 
         // Initialize Firebase
-        const app = initializeApp(firebaseConfig);
-        const auth = getAuth(app);
-        const firestore = getFirestore(app);
+        firebase.initializeApp(firebaseConfig);
 
         //Começamos aqui.
+        var usuario = null;
+
+        firebase.auth().signInWithEmailAndPassword(email, password)
+        .then((userCredential) => {
+            // Signed in
+            var user = userCredential.user;
+            // ...
+        })
+        .catch((error) => {
+            var errorCode = error.code;
+            var errorMessage = error.message;
+        });
     </script>
 </body>
 </html>
